# sn17-test

./: .gitignore  README.md  configuration.yaml
docker/: Dockerfile  docker-compose.yml  requirements.txt
pipeline_service/: logger_config.py  serve.py  utils.py
pipeline_service/config/: prompting_library.py  settings.py
pipeline_service/libs/: __init__.py
pipeline_service/libs/o-voxel/: pyproject.toml
pipeline_service/libs/o-voxel/o_voxel/: __init__.py  rasterize.py
pipeline_service/libs/trellis2/: pipeline.json
pipeline_service/libs/trellis2/models/: __init__.py
pipeline_service/libs/trellis2/modules/: image_feature_extractor.py
pipeline_service/libs/trellis2/pipelines/: __init__.py  base.py  (+1 more)
pipeline_service/modules/: pipeline.py  utils.py
pipeline_service/modules/background_removal/: ben2_module.py  birefnet_module.py  rmbg_manager.py  settings.py
pipeline_service/modules/converters/: enums.py  glb_converter.py  mesh_utils.py  params.py  schemas.py  settings.py  texturing_utils.py  utils.py
pipeline_service/modules/grid_renderer/: constants.py  render.py
pipeline_service/modules/image_edit/: prompting.py  qwen_edit_module.py  qwen_manager.py  settings.py
pipeline_service/modules/mesh_generator/: enums.py  schemas.py  settings.py  trellis_manager.py
pipeline_service/prompts/: qwen_edit_prompt_v1.json  qwen_edit_prompt_v2.json  qwen_edit_prompt_v3.json  qwen_edit_prompt_v4.json  qwen_edit_prompt_v5.json
pipeline_service/schemas/: enums.py  internal.py  overridable.py  requests.py  responses.py  tensors.py  types.py
(+6 files in other folders)
