[build-system]
requires = [
    "setuptools==79.0.1",
    "wheel==0.45.1",
    "torch==2.8.0",
    "numpy==2.3.2",
    "plyfile==1.1.3",
    "trimesh==4.10.1",
    "tqdm==4.67.1",
    "zstandard==0.23.0",
    "easydict==1.13"
]
build-backend = "setuptools.build_meta"


[project]
name = "o_voxel"
version = "0.0.1"
description = "All about voxel."
requires-python = ">=3.8"
authors = [
    { name = "Jianfeng Xiang", email = "belljig@outlook.com" }
]
dependencies = [
    "torch==2.8.0",
    "numpy==2.3.2",
    "plyfile==1.1.3",
    "trimesh==4.10.1",
    "tqdm==4.67.1",
    "zstandard==0.23.0",
    "easydict==1.13",
    "cumesh @ git+https://github.com/JeffreyXiang/CuMesh.git@c4ad6125924fcedfd13f0bd61520ca2d24eb7a87",
    "flex_gemm @ git+https://github.com/JeffreyXiang/FlexGEMM.git@6a184e957e1d3d18763221513b3e810ac1e7c8e8",
]
